--- a/src/scss/colors/_color-text.scss
+++ b/src/scss/colors/_color-text.scss
@@ -19,6 +19,9 @@
 }
 .color-txt-green-lgt{
     color: $secondaryColorBgGreen1;
+}
+.color-txt-pink{
+    color: $secondaryColorTxtPink;
 }  
 .color-nav{
     color: $primaryColorNav;
@@ -37,5 +40,8 @@
 }
 .color-lnk-drk{
     color: $secondaryColorLnk2;
+}
+.color-txt-pink{
+    color: $primaryColorBgPink;
 }
 
