--- a/src/scss/variables/_color-variables.scss
+++ b/src/scss/variables/_color-variables.scss
@@ -41,6 +41,7 @@ $primaryColorLnk: #1794cf;
 //paleta secundaria texto
 $secondaryColorTxtGrey1: #b3b3b3;
 $secondaryColorTxtGrey2: #404040;
+$secondaryColorTxtPink: #ed497e;
 $secondaryColorNav1: #ffefb3;
 $secondaryColorNav2: #ffcc00;
 $secondaryColorLnk1: #aadef5;
