--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,14 @@
 @import 'variables/color-variables';
-@import 'layout/header';
-@import 'vendor/clearfix';
-@import 'colors/color-background';
-@import 'colors/color-text';
 @import 'layout/generic';
 @import 'layout/images';
 @import 'layout/buttons';
 @import 'layout/footer';
+@import 'layout/typography';
+@import 'layout/header';
+@import 'vendor/clearfix';
+@import 'vendor/normalize';
+@import 'vendor/animations';
+@import 'colors/color-background';
+@import 'colors/color-text';
+
 
