--- a/src/scss/layout/_images.scss
+++ b/src/scss/layout/_images.scss
@@ -42,23 +42,30 @@
     background-image: url("../img/arg-1.svg");
     background-repeat: no-repeat;
     background-size:cover;
-    width:100%;
-    height:395px;
+    flex-basis:400px;
+    height:400px;
+    min-width:350px;
+    margin:auto;
 }
 .arg2-img{
     background-image: url("../img/arg-2.svg");
     background-repeat: no-repeat;
     background-size:cover;
+    flex-basis:400px;
     width:150px;
-    height:395px;
-    margin-bottom: 2rem;
+    height:400px;
+    min-width:250px;
+    margin:auto;
 }
 .arg3-img{
     background-image: url("../img/arg-3.svg");
     background-repeat: no-repeat;
     background-size:cover;
+    flex-basis:400px;
     width:150px;
-    height:395px;
+    height:400px;
+    min-width:250px;
+    margin:auto;
 }
 
 
