--- a/src/scss/colors/_color-background.scss
+++ b/src/scss/colors/_color-background.scss
@@ -76,4 +76,7 @@
 .color-bg-white{
     background-color: $primaryColorWhite;
 }
+.color-bg-brown{
+    background-color: $primaryColorBgBrown;
+}
 
