--- a/src/scss/variables/_color-variables.scss
+++ b/src/scss/variables/_color-variables.scss
@@ -15,7 +15,8 @@ $primaryColorBgGreen: #33bb44;
 $primaryColorBgBlue: #11bbcc; 
 $primaryColorBgPink: #ed497e;
 $primaryColorBgYellow: #ffcc00; 
-$primaryColorBgBlack: #404040; 
+$primaryColorBgBlack: #404040;
+$primaryColorBgBrown: #996633;
 
 //paleta secundaria background
 $secondaryColorBgOrange1: #ff9f80;
