--- a/src/scss/layout/_generic.scss
+++ b/src/scss/layout/_generic.scss
@@ -51,7 +51,7 @@
     padding:0rem 0 2rem 0rem;
     justify-content: flex-end;
     text-align: center;
-    margin: 0.25rem 0.25rem 0rem 0;
+
     }
 
     &-flex-3{
@@ -62,6 +62,8 @@
     justify-content: flex-end;
     text-align: center;
     margin: 0rem 0em 7rem 0rem;
+    border: 1px solid green;
+    min-height:625px;
     }
 
     &-flex-4{
@@ -108,7 +110,7 @@
     &-rnd-top{
     margin:auto;
     padding:1.25rem 0rem;
-    width:95%;
+    width:100%;
     background-color:$primaryColorBgPink;
     border-top-left-radius:1rem;
     border-top-right-radius:1rem;
@@ -118,12 +120,16 @@
     text-align:center;
     box-shadow: 0px 1px 5px $secondaryColorBgBlack2;
     z-index:10;
+    @media only screen and (min-width: 768px){
+
     }
+}
+ 
 
     &-rnd-bottom{
     margin:auto;
     padding:1rem 0.75rem 1rem 0.75rem;
-    width:95%;
+    width:100%;
     background-color:$primaryColorWhite;
     border-top-left-radius:0rem;
     border-top-right-radius:0rem;
@@ -195,11 +201,12 @@
     border-radius: 1rem;
     height: auto;
     background-color: #ffffff;
-    margin-bottom: -100px;
+    margin-bottom: 0px;
     padding:2rem;
     margin-left: 3%;
     justify-content: flex-end;
     box-shadow: $colorShadowBtn 0px 3px 3px;
+    border:1px solid red;
 }
 .max-min{
     min-width: 300px;
