--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -59,7 +59,7 @@ h1{
 
 h2{
     font-size: 2rem;
-    line-height: 2rem;
+    line-height: 2.5rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-weight: 700;
@@ -74,6 +74,7 @@ h2{
 }
 
 h3{
+    font-family:'Source Sans', sans-serif;
     font-size: 1.1rem;
     line-height: 1.5rem;
     font-weight: 400;
