--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -122,7 +122,7 @@ h6{
     text-align: center;
 }
 .txt-margin{
-    margin: 1rem;
+    margin: 4rem 1rem 1rem 1rem;
 }
 .capitalLetter{
    float:left;
