adding rs icons

--- a/src/scss/layout/_generic.scss
+++ b/src/scss/layout/_generic.scss
@@ -63,7 +63,6 @@
     text-align: center;
     margin: 0rem 0em 0rem 0rem;
     min-height:500px;
-    border: 1px solid red;
     }
 
     &-flex-4{
@@ -217,4 +216,10 @@ hr{
 }
 .testimonial{
     padding:2rem 1rem 2rem 1rem;
+}
+.container-icons{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin:auto;
 }
