--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -15,7 +15,8 @@ a{
 
 /*typography*/
 p{
-    font-weight: 700;
+    font-family: 'Open Sans', sans-serif; 
+    font-weight: 400;
     font-size: 1rem;
     line-height: 1.25rem;
     margin-top: 1rem;
@@ -74,16 +75,16 @@ h2{
 }
 
 h3{
-    font-family:'Source Sans', sans-serif;
+    font-family:'Open Sans', sans-serif;
     font-size: 1.1rem;
     line-height: 1.5rem;
-    font-weight: 400;
+    font-weight: 700;
 @media only screen and (min-width: 768px){
     font-size: 1.3rem;
     line-height: 2rem;
     margin-top: 0rem;
     margin-bottom: 0rem;
-    font-weight: 400;
+    font-weight: 700;
     }
 }
 
