adding max-width to structure

--- a/src/scss/variables/_color-variables.scss
+++ b/src/scss/variables/_color-variables.scss
@@ -11,7 +11,7 @@ $primaryColorWhite: #ffffff;
 
 //colores principales background
 $primaryColorBgOrange: #ff6633; 
-$primaryColorBgGreen: #33bb44;
+$primaryColorBgGreen: #7eac63;
 $primaryColorBgBlue: #11bbcc; 
 $primaryColorBgPink: #ed497e;
 $primaryColorBgYellow: #ffcc00; 
