--- a/src/scss/layout/_images.scss
+++ b/src/scss/layout/_images.scss
@@ -47,10 +47,14 @@
 .logo-kidscode{
     margin:auto;
     padding-top:0rem;
-    height: 150px;
-    width: 250px;
+    height: 200px;
+    width: 400px;
     background-image: url("../img/logo.svg");
     background-repeat: no-repeat;
+@media only screen and (min-width: 320px) and (max-width: 1023px){
+    height:120px;
+    width:280px;
+    }
 }
 
 .arg1-img{
@@ -350,7 +354,7 @@
     position: absolute;
     background-image: url("../img/butterfly.svg");
     background-size:cover;
-    width:75px;
+    width:78px;
     height: 75px;
 }
 .rs-fb{
@@ -373,4 +377,8 @@
     width:75px;
     height: 75px;
     margin: 10px;
+}
+.suelo{
+    border-bottom-image:url("../img/m-suelo.svg");
+    repeat: repeat-x;
 }
