--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -35,16 +35,29 @@ p{
 }
 
 h1{
-    font-size: 3rem;
-    line-height: 2.75rem;
+    font-size: 1.85rem;
+    line-height: 2rem;
     margin-top: 1.36rem;
     margin-bottom: 1.36rem;
+    margin-left:4%;
+    margin-right: 4%;
     font-weight: 700;
+    text-shadow: 0px 1px 5px $secondaryColorBgBlack2;
 
-    /*Desktop & tablet*/
+    //Mobile Portrait
+    @media only screen and (min-width: 550px) and (max-width: 767px){
+    margin-bottom: 0rem;
+    margin-left:6%;
+    margin-right: 6%;
+    font-size: 1.85rem;
+    line-height: 2rem;
+    }
+    //Desktop & tablet
     @media only screen and (min-width: 768px){
-    font-size: 3.5rem;
-    line-height: 3.75rem; 
+    margin-left:12%;
+    margin-right: 12%;
+    font-size: 4rem;
+    line-height: 4.25rem;
     }
 }
 .t-h1{
@@ -64,6 +77,7 @@ h2{
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-weight: 700;
+
     
 @media only screen and (min-width: 768px){
     font-size: 2rem;
@@ -82,9 +96,6 @@ h3{
 @media only screen and (min-width: 768px){
     font-size: 1.3rem;
     line-height: 2rem;
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-    font-weight: 700;
     }
 }
 
@@ -130,4 +141,23 @@ h6{
    font-family: 'Open Sans',sans-serif;
    font-size:5rem;
    margin-left:-20px;
+}
+.citas{
+    font-size: 2rem;
+    line-height: 2.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+
+    
+@media only screen and (min-width: 768px){
+    font-size: 2rem;
+    line-height: 2.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    }
+}
+.txt-shadow{
+     text-shadow: 0px 1px 5px $secondaryColorBgBlack2;
 }
