adding pdf download

--- a/src/scss/layout/_generic.scss
+++ b/src/scss/layout/_generic.scss
@@ -221,10 +221,12 @@ hr{
 }
 .testimonial{
     padding:2rem 1rem 2rem 1rem;
+    color:black;
 }
 .container-icons{
     display:flex;
     align-items: center;
     justify-content: center;
     margin:auto;
+    visibility: hidden;
 }
