--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -30,7 +30,8 @@ p{
     /*Desktop & tablet*/
     @media only screen and (min-width: 768px){
     font-size: 1.25rem;
-    line-height: 1.5rem; 
+    line-height: 1.5rem;
+    margin-top: 1rem; 
     }
 }
 
