--- a/src/scss/variables/_color-variables.scss
+++ b/src/scss/variables/_color-variables.scss
@@ -11,7 +11,7 @@ $primaryColorWhite: #ffffff;
 
 //colores principales background
 $primaryColorBgOrange: #ff6633; 
-$primaryColorBgGreen: #7eac63;
+$primaryColorBgGreen: #33bb44;
 $primaryColorBgBlue: #11bbcc; 
 $primaryColorBgPink: #ed497e;
 $primaryColorBgYellow: #ffcc00; 
@@ -23,6 +23,7 @@ $secondaryColorBgOrange1: #ff9f80;
 $secondaryColorBgOrange2: #e63900;
 $secondaryColorBgGreen1: #73d980;
 $secondaryColorBgGreen2: #1b6425;
+$secondaryColorBgGreen3: #7eac63;
 $secondaryColorBgBlue1: #89ecf5;
 $secondaryColorBgBlue2: #0a6d76;
 $secondaryColorBgBlue3: #0097e8;
