--- a/src/scss/colors/_color-background.scss
+++ b/src/scss/colors/_color-background.scss
@@ -23,6 +23,10 @@
     background-color: $secondaryColorBgGreen1;
 }  
 
+.color-bg-green-mountain{
+    background-color: $secondaryColorBgGreen3;
+}
+
 .color-bg-blue{
     background-color: $primaryColorBgBlue;
 }
