--- a/src/scss/layout/_images.scss
+++ b/src/scss/layout/_images.scss
@@ -1,39 +1,7 @@
 //Estilos para las imágenes, ilustraciones que utilizamos
 //en la web
 
-//ilustración monster con isla debajo
-.header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: auto;
-    //height: 500px;
-    background-image: url("../img/bg-movil.svg");
-    background-size: cover;
-    height: 100vw;
-    height: 100vh;
-    //background-position: top; 
-    //background-repeat: no-repeat;
-    //background-attachment: scroll;
-    //background-position: top center;
-    
-    /*MEDIA QUERIES*/
 
-    //Mobile landscape
-    @media only screen and (min-width: 568px) and (max-width: 767px){
-        background-image: url("../img/bg-movil-p.svg");
-    }
-    //Tablet
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-        background-image: url("../img/bg-tablet.svg");
-    }
-
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-        background-image: url("../img/bg-desktop.svg");  
-    }
-}
 .rumble-img{
     margin:auto;
     padding-top:0rem;
@@ -44,6 +12,36 @@
      @media only screen and (min-width: 320px) and (max-width: 1023px){
     }
 }
+.logo-kidscode-header{
+    //max-width: 39%;
+    // position: absolute;
+    //     top: 5%;
+    //     left: 15%;
+    //margin: 3% auto 0 6%;
+    // margin:auto;
+    //padding-top: 0rem;
+    width: 200px;
+    height: 100px;
+    margin: auto;
+    background-image: url("../img/logo.svg");
+    background-repeat: no-repeat;
+    //display: none;
+            /*MEDIA QUERIES*/
+        /*Tablet*/
+        @media only screen and (min-width: 768px) and (max-width: 1023px){
+         display: block;
+         width: 400px;
+        height: 200px;
+        }
+
+        /*Desktop*/
+        @media screen and (min-width: 1024px){
+          display:block;
+          width: 400px;
+    height: 200px;
+        }
+}
+
 .logo-kidscode{
     margin:auto;
     padding-top:0rem;
@@ -51,10 +49,11 @@
     width: 400px;
     background-image: url("../img/logo.svg");
     background-repeat: no-repeat;
-@media only screen and (min-width: 320px) and (max-width: 1023px){
-    height:120px;
-    width:280px;
-    }
+
+    @media only screen and (min-width: 320px) and (max-width: 1023px){
+        height:120px;
+        width:280px;
+        }
 }
 
 .arg1-img{
