fixing and adding footer to contdition terms

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -19,9 +19,10 @@
     }
 }
 
-.copyright, .contact{
+.contact{
     margin: auto;
     text-align: center;
-    //width: 85%;
-    padding: .5rem;
+    padding: 45px 0px;
+    color: white;
+    line-height: 38px;
 }
